--- a/render.yaml
+++ b/render.yaml
@@ -7,7 +7,7 @@ services:
     name: nest-app
     plan: free
     env: node
-    buildCommand: "npm run build"
+    buildCommand: "npm install && npm run build"
     startCommand: "npm start"
     envVars:
       - key: DB_PORT
