--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
     "web"
   ],
   "scripts": {
-    "start": "npm run start -w server",
-    "build": "npm run build -w web && npm run migrate -w server"
+    "start": "npm run start -w server"
   }
 }
